@@ -217,7 +217,8 @@ Various bugfixes, small features, and a few experimental things:
 * links and brokenlinks tables merged to pagelinks; this will reduce pain
   dealing with moves and deletes of widely-linked pages.
 * Add validate table and val_ip column through the updater.
-
+* Simple rate limiter for edits and page moves; set $wgRateLimits
+  (somewhat experimental; currently needs memcached)
 
 === Caveats ===
 
